[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vm_translator"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    # Add runtime dependencies here
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]